--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,8 +27,10 @@
 
 html,
 body {
-  max-width: 100vw;
+  max-width: 737px;
+  margin: 0 auto;
   overflow-x: hidden;
+  font-size: 18px;
 }
 
 body {
