refactor: adjusted toggle logic and styling

--- a/src/components/toggles/toggleSwitch/ToggleSwitch.module.css
+++ b/src/components/toggles/toggleSwitch/ToggleSwitch.module.css
@@ -28,6 +28,10 @@
   transition: 0.4s;
 }
 
+.slider:hover {
+  background-color: var(--purple);
+}
+
 .slider:before {
   position: absolute;
   content: "";
