--- a/src/layouts/header/Header.module.css
+++ b/src/layouts/header/Header.module.css
@@ -17,3 +17,15 @@
   background: var(--platinum);
   width: 1px;
 }
+
+.sans {
+  font-family: var(--sans-serif);
+}
+
+.serif {
+  font-family: var(--serif);
+}
+
+.mono {
+  font-family: var(--mono);
+}
