--- a/src/components/dropdowns/dropdown/Dropdown.module.css
+++ b/src/components/dropdowns/dropdown/Dropdown.module.css
@@ -3,10 +3,13 @@
   display: flex;
   align-items: center;
   outline: none;
+  cursor: pointer;
 }
 
 .value {
   flex-grow: 1;
+  font-family: var(--global-font-family);
+  font-weight: bold;
 }
 
 .options {
@@ -14,14 +17,33 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  border-radius: 0.5em;
+  border-radius: 0.889em;
   right: 0;
-  top: calc(100% + 0.5em);
+  top: calc(100% + 1em);
   width: 100%;
   overflow-y: auto;
   display: none;
+  font-weight: bold;
+  min-width: 10.722em;
+  padding: 1.667rem 1.333rem;
+  background-color: var(--white-eerie-black);
+  box-shadow: var(--black-purple-shadow);
+  font-size: 1rem;
 }
 
 .show {
   display: block;
+}
+
+.option:nth-child(2n) {
+  margin-top: 1.333rem;
+  margin-bottom: 1.333rem;
+}
+
+.option:hover {
+  color: var(--purple);
+}
+
+.arrow {
+  margin-left: 1em;
 }
