style: made header responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@
 
 html,
 body {
-  max-width: 737px;
+  max-width: 776px;
   margin: 0 auto;
   font-size: 18px;
 }
@@ -53,6 +53,11 @@ body {
   background: var(--background);
 }
 
+header,
+main {
+  padding: 0 39px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -60,6 +65,17 @@ a {
 
 h1 {
   font-family: var(--global-font-family);
+  font-size: 3.556rem;
+}
+
+@media (width <= 548px) {
+  header,
+  main {
+    padding: 0 24px;
+  }
+  h1 {
+    font-size: 1.778rem;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
