--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@
   --background: var(--white);
   --gray-purple: var(--gray);
   --white-eerie-black: var(--white);
+  --smoke-eerie-black: var(--smoke);
 
   --black-purple-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.1);
 
@@ -31,6 +32,7 @@
   --background: var(--black);
   --gray-purple: var(--purple);
   --white-eerie-black: var(--eerie-black);
+  --smoke-eerie-black: var(--eerie-black);
 
   --black-purple-shadow: 0px 5px 30px 0px var(--purple);
 }
