--- a/src/components/SearchResults/wordMeaning/WordMeaning.module.css
+++ b/src/components/SearchResults/wordMeaning/WordMeaning.module.css
@@ -37,3 +37,23 @@
   display: inline;
   padding: 0 1.111rem;
 }
+
+.synAntWrapper {
+  display: flex;
+  align-items: baseline;
+}
+
+.synAnt {
+  display: flex;
+  align-items: end;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.synAnt button {
+  margin-left: 1.222rem;
+}
+
+.hasAnt {
+  margin-bottom: 1.111rem;
+}
