--- a/src/components/SearchResults/wordMeaning/WordMeaning.module.css
+++ b/src/components/SearchResults/wordMeaning/WordMeaning.module.css
@@ -57,3 +57,15 @@
 .hasAnt {
   margin-bottom: 1.111rem;
 }
+
+@media (width <= 548px) {
+  .container {
+    margin: 1.889rem 0;
+  }
+  .synonym {
+    margin-top: 1.333rem;
+  }
+  .list li::before {
+    padding-left: 0;
+  }
+}
