--- a/src/components/buttons/buttonLink/ButtonLink.module.css
+++ b/src/components/buttons/buttonLink/ButtonLink.module.css
@@ -12,3 +12,9 @@
   text-decoration: underline;
   text-decoration-color: var(--purple);
 }
+
+@media (width <= 548px) {
+  .button {
+    font-size: 0.889rem;
+  }
+}
